# BSCOS

./: CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  README.md  boot.s  claws.h  cmake_install.cmake  compile_commands.json  example.c  grub.cfg  kernel.c  linker.ld  main.c  pack.py
.github/workflows/: jekyll-gh-pages.yml
